Update build with corrected homepage path and deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Rstarkey013.github.io/Bacnet",
+  "homepage": ".",
   "name": "react-demoapp",
   "version": "0.1.0",
   "private": true,
